<resources>
    <string name="app_name">H2TShop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="promotion_code">Mã khuyến mãi</string>
    <string name="payCapsLock">THANH TOÁN</string>
    <string name="about_content">Shop thời trang nam online H2T đã khẳng định được sự chuyên nghiệp của mình trong công việc. Quần, áo tại H2T được cập nhật mới liên tục, mỗi mẫu đều có số lượng hàng đầy đủ để cung ứng cho khách hàng bán buôn và bán lẻ. Đội ngũ nhân viên của H2T trẻ trung, năng động và phong cách bán hàng chuyên nghiệp nhiệt tình…H2T-Shop cam kết bán hàng đúng giá niêm yết, chất lượng đảm bảo, bồi thường gấp đôi nếu có vấn để về chất lượng sản phẩm khi bán cho khách hàng. Shop online H2T luôn đem lại sự hài lòng đến với khách hàng!</string>
    <string name="title">GIỚI THIỆU VỀ H2T</string>
    <string name="size">Kích cỡ:</string>
    <string name="add_to_cart">THÊM VÀO GIỎ HÀNG</string>
    <string name="title_detail">Chi tiết sản phẩm</string>
    <string name="sdf">ssmmhhddMMyyyy</string>
    <string name="sdf2">dd/MM/yyyy</string>
    <string name="pay">Thanh Toán</string>
    <string name="how_many">Bạn muốn mua bao nhiêu?</string>
    <string name="h2t_shop">H2T Shop</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="sign">ĐĂNG KÍ</string>
    <string name="birthday">Ngày sinh</string>
    <string name="phoneNumber">Số điện thoại</string>
    <string name="location">Huyện - Thị xã</string>
    <string name="city">Thành Phố</string>
    <string name="createAccount">TẠO TÀI KHOẢN</string>
    <string name="total">Total:</string>
    <string name="vnd"> đ </string>
    <string name="describe">Mô tả:</string>
    <string name="take_photo">CHỤP</string>
    <string name="choose_photo">CHỌN</string>
    <string name="save_caps_lock">LƯU</string>
    <string name="new_pass">Mật khẩu Mới</string>
    <string name="renew_pass">Nhập lại mật khẩu mới</string>
    <string name="change">ĐỔI MẬT KHẨU</string>
    <string name="new_name">Tên mới</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="ch_a_c_t_i_kho_n">Chưa có tài khoản?</string>
    <string name="home">Trang Chủ</string>
    <string name="shop">Cửa Hàng</string>
    <string name="account">Tài Khoản</string>
    <string name="cart">Giỏ Hàng</string>
    <string name="about">Về Chúng Tôi</string>
    <string name="bill">Lịch Sử Giao Dịch</string>
    <string name="logout">Đăng Xuất</string>
    <string name="clothes">Quần áo</string>
    <string name="bag">Túi</string>
    <string name="shoes">Giầy</string>
    <string name="jewelry">Phụ kiện</string>
    <string name="name">Tên</string>
    <string name="continue_caps_lock">TIẾP TỤC</string>
    <string name="c_t_i_kho_n">Đã có tài khoản?</string>
    <string name="info">Thông Tin Cá Nhân</string>
    <string name="change_avatar">Thay Ảnh Dại Diện</string>
    <string name="delete">Xóa?</string>
    <string name="ok">OK</string>
    <string name="cancel">HỦY</string>
    <string name="thay_i">Thay Đổi?</string>
    <string name="change_info">Sửa thông tin</string>
    <string name="wish_list">YÊU THÍCH</string>
    <string name="jewelry_"><![CDATA[TRANG SỨC & \n PHỤ KIỆN]]></string>
    <string name="bag_caps_lock">TUI DA</string>
    <string name="clothes_caps_lock">QUẦN ÁO</string>
    <string name="sale_50">SALE 50%</string>
    <string name="shop_caps_lock">SHOP</string>
    <string name="shoes_caps_lock">GIẦY</string>
    <string name="t_n_s_n_ph_m_c_n_t_m">Tên sản phẩm cần tìm</string>
    <string name="shop_products">Shop Products</string>
    <string name="sale_caps_lock">SALE</string>
    <string name="qnt">Qnt:</string>
    <string name="price">Giá:  </string>
    <string name="id_bill">Mã HĐ:  </string>
    <string name="delivering">Đang chuyển</string>
    <string name="delivered">Đã chuyển</string>
    <string name="detail_bill">Chi Tiết Hóa Đơn</string>


</resources>