<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/background_c"
    >
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edittext1"
        android:hint="@string/t_n_s_n_ph_m_c_n_t_m"
        android:id="@+id/autoComplete"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop_products"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvAllQnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#4E4E4E"/>
    </LinearLayout>

    <TextView
        android:id="@+id/openClothesShop"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/clothes_caps_lock"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/openShoesShop"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/shoes_caps_lock"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/openJewelryShop"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/jewelry_"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/openBagShop"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/bag_caps_lock"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/openSaleShop"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/sale_caps_lock"
        android:textSize="25sp"
        android:textColor="@color/black"/>
</LinearLayout>