<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.H2TShop"
    android:background="@color/background_b"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/pay"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="center">
        <TextView
            android:id="@+id/ok"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_red"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginEnd="50dp"/>
        <TextView
            android:id="@+id/huy"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_red"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>