<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:theme="@style/Theme.H2TShop"
    android:background="@color/background_b"
    tools:context=".activity.ShopClothesActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarShopClothes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#292C2F"
        app:titleTextColor="@color/white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="64dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="46dp"
                android:text="@string/clothes"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:background="@drawable/button_red"
                />
            <TextView
                android:layout_marginStart="20dp"
                android:id="@+id/tui"
                android:layout_width="150dp"
                android:layout_height="46dp"
                android:text="@string/bag"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="18sp"
                android:background="@drawable/button_white"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/black"
                android:id="@+id/giay"
                android:layout_width="150dp"
                android:layout_height="46dp"
                android:text="@string/shoes"
                android:gravity="center"
                android:textSize="18sp"
                android:background="@drawable/button_white"/>
            <TextView
                android:id="@+id/phuKien"
                android:layout_marginStart="20dp"
                android:layout_width="150dp"
                android:layout_height="46dp"
                android:text="@string/jewelry"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:background="@drawable/button_white"
                />
        </LinearLayout>
    </LinearLayout>
    <GridView
        android:id="@+id/grvClothes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:numColumns="2"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"/>

</LinearLayout>