<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".activity.CartActivity"
    android:theme="@style/Theme.H2TShop"
    android:background="@color/background_b">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#292C2F"
        app:titleTextColor="@color/white" />


    <ListView
        android:id="@+id/lvCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"/>
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="NestedWeights">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promotion_code"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="120dp"
                android:layout_height="46dp"
                android:id="@+id/codeSale"
                android:background="@drawable/button_red"
                android:gravity="center"
                android:inputType="text"
                android:autofillHints=""
                tools:ignore="LabelFor" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/total"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vnd"
                android:textSize="20sp"

                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/den"
        android:text="@string/payCapsLock"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:id="@+id/pay"/>

</LinearLayout>