<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_b"
    android:theme="@style/Theme.H2TShop"
    tools:context=".activity.LoginActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#292C2F"
        tools:ignore="MissingConstraints"
        app:titleTextColor="@color/white"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_login_logo"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLogin"
         />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/h2t_shop"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints"
        android:padding="15dp"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/icon_login_email"
             />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_email"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#707070"
            app:errorEnabled="true"
            android:textColorHint="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="#707070"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:background="#eaeaea"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/icon_login_password"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#707070"
            android:textColorHint="@color/black"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="#707070"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:background="#eaeaea"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/loGin"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        android:layout_marginTop="15dp"
        android:layout_margin="30dp"
        android:background="@drawable/button_black"
        android:text="@string/login"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        />

    <LinearLayout
        android:id="@+id/openSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ch_a_c_t_i_kho_n"
            android:textColor="@color/black"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sign"
            android:textColor="@color/black"
            android:textSize="17sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>