<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_b"
    tools:context=".activity.SignUpActivity"
    android:theme="@style/Theme.H2TShop">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#292C2F"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSignUp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_ten"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#707070"
            app:errorEnabled="true"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="#707070"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:background="#eaeaea" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!--    -->


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_emailNew"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#707070"
            app:errorEnabled="true"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="#707070"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:background="#eaeaea" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_passwordNew1"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#707070"
            app:errorEnabled="true"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_pass"
                android:textColorHint="#707070"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:background="#eaeaea" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_passwordNew2"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#707070"
            app:errorEnabled="true"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/renew_pass"
                android:textColorHint="#707070"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:background="#eaeaea" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/taoTK"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:background="@drawable/button_red"
        android:gravity="center"
        android:text="@string/continue_caps_lock"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

    <LinearLayout
        android:id="@+id/openLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/c_t_i_kho_n"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>